[package]
name = "url-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
reqwest = "0.11.20"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
